<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".LoginUsernameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="#A4A6A5"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textColor="#4E342E"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="#A4A6A5"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textColor="#4E342E"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="#F3AC8F"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textColor="#4E342E"
                android:textSize="18sp"/>

        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="20"
        android:src="@drawable/person_icon"
        android:contentDescription="@string/todo_1">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:letterSpacing="0.08"
        android:text="@string/enter_your_username"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="5"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:textColorHint="#757575"
            android:id="@+id/login_username"
            tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_weight="20"
        android:orientation="vertical">
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/let_me_in"
            android:id="@+id/login_let_me_in_btn"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:layout_gravity="center"
            android:id="@+id/login_progessbar"/>
    </LinearLayout>


</LinearLayout>