<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3D0F4"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/chat_icon"
            app:tint="#10100F"
            android:contentDescription="@string/todo">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textColor="#D81B60"
            android:textSize="40sp"
            android:textStyle="bold"></TextView>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content">
        </ProgressBar>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/developed_by_manoj"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck">

    </TextView>

</RelativeLayout>