<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:padding="10dp"
        android:id="@+id/toolbar"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/search_user"
            android:textColor="#455A64"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"
            android:layout_toRightOf="@id/back_btn"/>

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/_4"
            android:src="@drawable/back_icon"
            app:tint="@color/black"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:id="@id/search_user_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="4dp"
            android:hint="@string/user_name"
            android:id="@+id/search_user_input"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#757575"
            android:layout_toLeftOf="@id/search_user_btn"/>

        <ImageButton
            android:id="@+id/search_user_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/_1"
            android:padding="4dp"
            android:src="@drawable/search_icon"
            app:tint="#3561E4" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_user_layout"
        android:padding="10dp"
        android:id="@+id/search_user_recycler_view"/>


</RelativeLayout>