<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:padding="10dp"
        android:id="@+id/toolbar"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="Username"
            android:textColor="#455A64"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"
            android:layout_toRightOf="@id/profile_pic_layout"
            android:id="@+id/other_username"/>

        <include layout="@layout/profile_picture_view"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:id="@+id/profile_pic_layout"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/back_btn"/>

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/_4"
            android:src="@drawable/back_icon"
            app:tint="@color/black"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/bottom_layout"
        android:id="@+id/chat_recycler_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:id="@+id/bottom_layout">

        <EditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/message_send_btn"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="4dp"
            android:hint="@string/write_message_here"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/message_send_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/_1"
            android:padding="8dp"
            android:src="@drawable/send_icon"
            app:tint="#026693" />

    </RelativeLayout>


</RelativeLayout>